--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  margin-top: 100px;
+  margin-top: 8%;
   font-family: 'Arial', sans-serif;
   background-color: #f4f4f9;
   color: #333;
@@ -27,24 +27,26 @@ body {
   margin-bottom: 30px;
   border-bottom: 5px solid #9ef9ff;
   border-radius: 8px;
-  font-size: 15px;
+  font-size: 13px;
 }
 
 .homepage {
   width: 1000px;
   max-width: 1400px;
-  padding: 30px;
+  padding: 40px;
   margin: 0 auto;
   background-color: white;
   border-radius: 12px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 }
+ 
 
 .task-list {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
   margin-top: 20px;
+  cursor: pointer;
 }
 
 .task-card {
@@ -61,7 +63,7 @@ body {
 }
 
 .task-card h3 {
-  font-size: 20px;
+  font-size: 18px;
   color: #333;
   margin-bottom: 10px;
 }
@@ -71,29 +73,16 @@ body {
   color: #666;
 }
 
-.button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 10px 20px;
-  border-radius: 20px;
-  cursor: pointer;
-  font-size: 14px;
-  font-weight: bold;
-  transition: background-color 0.3s ease;
-  margin-top: 10px;
-  gap: 10px;
-}
 
 .start-task,
 .complete-task {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 8px 20px;
+  padding: 7px 17px;
   border-radius: 20px;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 13px;
   font-weight: bold;
   transition: background-color 0.3s ease;
   margin-top: 10px;
